--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@types/express": "~4.17.13",
     "axios": "^1.0.0",
+    "bluebird": "^3.7.2",
     "express": "~4.18.1",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
